# aoc_2024_animation

./: .gitignore  Cargo.toml  base.css  index.html  package-lock.json  style.css  tailwind.config.js
data/: day1_diff  day1_left  day1_right
src/: day1.rs  main.rs
style/: style.css
