[package]
name = "leptos-tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-timers = { version = "0.3.0", features = ["futures"]}
leptos = { version = "0.7.4", features = ["csr"] }
leptos-use = "0.15.6"
leptos_meta = "0.7.4"
wasm-bindgen = "0.2.100"
